fix: alignment on chrome

--- a/src/pages/tables/styles/GeneratedTable.module.css
+++ b/src/pages/tables/styles/GeneratedTable.module.css
@@ -1,7 +1,7 @@
 .header {
     display: flex;
     justify-content: space-between;
-    align-items: end;
+    align-items: flex-end;
     margin-bottom: 1rem;
 }
 
